Added Delete button.

--- a/src/GUI/MainForm.resx
+++ b/src/GUI/MainForm.resx
@@ -5161,6 +5161,165 @@
         W+Ofafxzjn/uTWr89wIAAADMeT/zM/8P9eL9rvRsDGEAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="DeleteButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAACO6SURBVHhe7d0L2H/pXO/xMeM4xBQzezbJGCmNREokk9hE
+        UxNhUnJIkWgkqVwoh71LkU2pTKpLiQpTyqGcxXYqx5HMThpNxildhHFm7P25ZfY2+s7c6/n9///1rHut
+        1+u63tfeYmbu55m17t/z/z3rd38PAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACA/3Dx9NXpVukn0mPT09Nfpb9Or0//
+        mM66kNp/1/437X/b/pr217a/x31S+3teIx2RAIB9dLn0nenh6UXp3PR/DnEfSe2f1f6Zt0yXTQDAIXZk
+        Ojn9Yfpoql6k5+wT6TnprukKCQA4iL49nZ4+maoX4iXUfhh4RjoxAQA7unT60XRGql5wl9wb093TpRIA
+        MMHh6ZT0jlS9uI7UO9OPJQ8PAsBFOCn9XapeTEeuvYtx6wQAfJFjUnuwr3rxXFPtGYGjEwBsXnu7//2p
+        esFcYx9M7dcCALBJ7TP0f5yqF8kt9JTUPtYIAJvRTtVb4+/691p7NuD4BACr147VbW+DVy+IW+wDqZ1o
+        CACr9QPp06l6Idxyn0rfnwBgddpxuZ9J1QugDjvss+keCQBW46fS51L1wnewa58oeG76n6lNBfzu1I7n
+        /aZ0zdR+517V/rv2v2n/2/bXtL+2/T3a3+vfUvXPOti179GpCQCG90PpUL74t/kAbXxv+2hdGwd8qLQf
+        EO6VnpfaW/bVWg5G56X2qxIAGNZ/S4fqxbI9Qf/j6fJpbm3y373Tm1O1tgOt/VBzswQAw7lO+nCqXuAO
+        pJekJU3cu2l6aarWeiB9KF07AcAwLpf+IVUvbLvWJux9R1qq9if2gz258MzUDkwCgCE8NVUvaLt0brp/
+        unhaurbGB6SPpupr2aUnJwBYvPZRtuqFbJfekA7lg32HytekN6Xqa9qluycAWKyrpvYn9upFbK+dli6V
+        RnXp9MRUfW177SPpKxMALNKfp+oFbC+1jww+PK3F/VL7aF/1te6l0xMALM7JqXrh2kvtpMA7prVpZyG0
+        k/6qr3kvnZQAYDHaW/X/nKoXram1PyW3F8q1uls60HcC3pFG/rUIACvTjq+tXrD2UjvUZ+0OxvepHUAE
+        APuuPex2TqperKb262krnpCq78HU3pm8CwDAvrtvql6opvayNMJn/A+WS6RXpOp7MbX7JADYN0ekA/nT
+        fzvu9qvS1hyX2kf7qu/JlM5O7XsPAPviQJ/8/+G0VQd6YNKtEwDsi2el6sVpSq9KF0tb9r9S9b2Z0p8l
+        AJjdsenTqXpx6tU+DvfNaeuun3b9aGA7M+HKCQBm1YbeVC9MU2rDgvgPT0vV92hKbUgSAMyqPb1fvShN
+        6bqJ//ANqR1/XH2fer04AcBsrpB2ffv/eYkLelGqvle92r+D9u8CAGZxSqpekKZ0m8QF3S5V36sptb8W
+        AGbxu6l6Mer1gXTJxAW1k/3+PVXfs16/nQBgFm9M1YtRrzYfn9rvpep71uv1CQAOufYn+E+l6sWo1/cm
+        at+Xqu9Zr/bvwmwAAA659vn96oWoV5uHf1Si1r437XtUfe96tfMEAFi4w9NXppukW6T2EFd7qG6UHp+q
+        F6FebWZA9ffT/2/XuQrt30n191tq7Zpv1367B9q90O4JgNW5UrpLar//flPa9e1zaa21e6LdG+2Bxnav
+        XDEBDOmy6e7p5WnXt3WlrdbumXbQVBsWdWQCWLz2p/1fTm3MbbWxSdpb7V56ZPKuALBI7Snsh6RzU7WJ
+        STqwPpIenJwjASzGieltqdq0JB3c/iG1hwcB9s0R6WHJ7/ileWujkB+a2j0IMKvLpWenanOSNE/PT5dP
+        ALM4Ju16FK6kg1s7Crk9fAtwSH15ekOqNiJJ+9MZyacEgEOmfR75danagCTtb3+bLpMADqqLpT9J1cYj
+        aRmdntq9CnDQPCBVG46kZXW/BHBQXDt9IlWbjaRl9cl0nQRwQNqUsva7xWqjOdDa5Le/Sc9Nz5A21F+m
+        du2/K1X3xoH26uRXAcABacNIqg1mlz6XXpDa3/OqCTjssKulNjjrham6b3btzglgJ+18/4P1J5T2p56v
+        T8CF+4b0Z6m6h/bav6RLJIA9u0eqNpa99K/p9gmY7pT0/lTdU3upvbMAsGdnpmpTmdrb03EJ2Lvj01mp
+        urem9vcJYE++NVUbytTaDw/HJmB3/zUd6KTNb0kAk52Wqs1kSuemr0vAgWsfw/1oqu61Kf1mApisfUSv
+        2kymdNcEHDztd/nVvTal9jAgwCQnpGojmVKbFeDzx3BwtXvqQIZweUcOmOTUVG0iU7plAg6+70rVPTel
+        +yaArqelahPp9c/Jn/7h0Gj31tmpuvd6tXsaoGvX3///agIOncel6t7r9e4EcJGunqoNZEo3TcChc7NU
+        3XtTaucKAFyo9gR/tXn0+lQ6MgGHzmVSu9eqe7DXXRLAhXpiqjaPXq9KwKH3mlTdg73avQ1wod6aqs2j
+        168k4NBrz9pU92Cvdm8DlL4inZeqzaPXyQk49G6bqnuwVxvHfXQC+E9uk6qNo1fbWK6YgEPvSqndc9W9
+        2Ot7E8B/8uhUbRq9TByDee06qfNRCeA/eXWqNo1ev52A+fxOqu7FXu0eB7gAHy+Ccez6cd1PJx/XBS6g
+        HeJTbRhTOi4B82mH+lT34pQc2AVcwENStVn0elcC5rfrkd3tXgf4f56Xqs2i158kYH5PT9U92euvEsDn
+        HZ4+lKrNolcbHQzMr434re7JXh9ORySAw66Xqo1iSu2vBeb3jam6J6d03QTw+T/FV5tEL3+SgP3T7r1d
+        37n7iQRw2NNStUn0as8NAPvn+am6N3t5dgf4vF2fJpY0Zj69Axx29VRtEJLWnfM7YOPaKX7V5iBp3d05
+        ARvWzvGvNgdJ6+60BGzYW1O1OUhad6Z4woZ9Wdp1rriksWv3/mUTsEHXSdXGIGkbfW0CNsgPANK2u2YC
+        Nqj9CuAzqdoYJK27T6UjE7BRL0zV5iBp3T07ARv27cmDgNK2Oi/dOAEb96hUbRKS1tkvJYDDLpYelj6d
+        qs1C0jpqv/d/cAK4gGunx6f/nT6Rqg1E0li1e/nM9GvpWgngoHlqqjaeXmaSs3Wnpure6PX7CWDfPS5V
+        m1SvhyfYskek6t7o9egEsO/a7xSrTarXbyXYsiek6t7o9bMJYN/dM1WbVK9nJNiy01N1b/T64QSw726b
+        qk2q118n2LKXpere6PXdCWDftQNFqk2qVxtFDFvWns6v7o1eN0gA+64NFKk2qV7vT7Bl/5aqe6PXcQlg
+        3x2Vqk2q12fTEQm2qF377R6o7o1e5vgDi9BOEmwnjFUbVa8rJdiio1N1T/T6eAJYjPekarPq9XUJtuiE
+        VN0Tvf4lASzGm1O1WfVq0whhi26aqnui1+sTwGK8OFWbVa/bJ9iiO6Tqnuj1vASwGH+cqs2q170TbNF9
+        UnVP9HpyAliMX0/VZtXroQm2qI3gru6JXo9JAIvx86narHr9RoIt+s1U3RO9HpgAFuNeqdqsej0twRY9
+        PVX3RK8fSQCLcbtUbVa9XpJgi16aqnui18kJYDFOTNVm1evvEmzRW1J1T/S6UQJYjGularPq9d4EW/S+
+        VN0Tva6RABbjiqnarHp9JrWjhGFL2jXfrv3qnuh1+QSwGAeyoX1Fgi1p13x1L/T6ZAJYnF3f0vzaBFuy
+        66/MzkkAi7PrQ003SbAluz40+8YEsDi7fqzp+xJsya4fm31BAlicXQ82+bEEW7LrwVlPTQCLs+vRpg9J
+        sCW7Hp39uASwOLsON/m1BFuy6/CsByeAxdl1vOkfJdiSXcdn3zMBLM4pqdq0er0wwZa8KFX3Qq/bJoDF
+        +Y5UbVq9zkiwJe2ar+6FXt+WABbnhFRtWr3enWBL3pOqe6HXNRPA4hydqk2r16eSeQBsRbvW2zVf3Qu9
+        jkoAi3NE+myqNq5eV0iwBe1FvLoHen06+UEZWKx/S9Xm1eurE2xBexu/ugd6tV8bACzWmanavHp9a1qK
+        L0tXT0d+/j+t16W+0Jq1MdXHpyVNnLxxqu6BXm9OAIv18lRtXr2+N+2ny6SfS1/8A8x56U3p3ukSaQ2u
+        kZ6Q3pnO/zrb/7/939oL5Rq0H2run96azv8aW/+U2qmT+/2D3W3SF69rai9OAIv1p6navHr9aNov7S3Z
+        t6VqXef32nSVNLJ2/vxFPXzW/rvR5zJcLbUf2qqv7/zOSvs5gvoeqVpXrz9JAIt1Wqo2r14PSvvhmNQ+
+        hlit6Utr7w5cPo3o7qn6mqpG/SHgy9M/pupr+tLem45N+6Ed51utqdfjE8BiPSJVm1evx6b9sNcJhiPO
+        LWjvXHwsVV9P1cfTVdNo9jqM6hlpP7SBPtV6ev1CAlisU1O1efV6SprbcWmvH1v8aGoPCY7k0an6Wi6q
+        X0kjaR8jbT+4VF/LhdX+3bdrYG5tpG+1nl7tVzgAi3XHVG1evZ6f5vYjqVpLr5PSSP4+VV/HRfV3aSTf
+        k6qvo1e7Bub2glStpdftEsBi3TxVm1evN6S5/fdUraXX/dJI2rsW1ddxUbW/ZiQ/laqvo9fD09zemKq1
+        9DoxASzWdVK1efVqH0Wb264/APyPNJLqa5jSSNq/k+pr6NWugbmdk6q19LpWAlis9mR1tXn1+kSa2wNS
+        tZZe7WGzkVRfw5RG8lup+hp6tfMC5tau9WotvdqhRgCLdfH0uVRtYL0ul+a06zMAf5RGUn0NUxpJ+4x8
+        9TX0+uE0p/YAabWOXu2BxcMTwKJ9MFWbWK+5T6L7vlSto9dfpZFUX8OURtIeIq2+hl7tVL45tWu8Wkev
+        f00Ai/cPqdrEet0wzek7UrWOXq9JI6m+himN5G9T9TX0+vY0pxulah293pIAFu8VqdrEerWPcs3puqla
+        R6/2A85Iqq9hSiOZegLgl9YeWp3TyalaR6+XJoDFe2aqNrFe7bjaObXT7qp19Brt7djqa5jSSHYdQ/2V
+        aU67PnfSTqwEWLwnpmoT69Wm8c2pPXRYraPXp9PF0iiqr2FKI2n/Tqqvoddl05wemKp19BrtkyfARv1i
+        qjaxXr+a5rbrC8fcn1g4ENX6pzSKXZ+sb//u5/aYVK2l18MSwOK1k/KqTazXH6S5vT9Va+k10rCcav1T
+        GsVXpWr9vfbjVzlPTtVaet0nASzenVK1ifX6yzS3t6VqLb2+IY2iWv+URjHSw5ztI6TVWnqdkgAW75ap
+        2sR6vTbN7W9StZZeN02jqNY/pVGM9HHO16VqLb3a1wiweNdL1SbW6+w0t+elai29bptGUa1/SqMY6UCn
+        do1Xa+l17QSweFdJ1SbW62Npbn+cqrX0mvsjiweiWv+URjHSkc7tGq/W0uuYBLB4l0y7zgM4Ms1p1yEy
+        P51GUa1/SqPYdajTb6Q5tY8cVuvodV46IgEM4UOp2sx6XS3NadePLI40Erha/5RGseu/w7lHAR+XqnX0
+        aoccAQzj7anazHp9c5rTFkYCV+uf0ihGGQV8g1Sto9eZCWAYr07VZtbru9KctjASuFr/lEYxyijgk1K1
+        jl4vTwDDeFaqNrNed01z2sJI4Gr9UxrFKKOA75aqdfT60wQwjN9L1WbW62fSnLYwErha/5RGMcoo4HZt
+        V+vodVoCGMYvp2oz6/WoNKctjASu1j+lUYwyCrhd29U6es39sCLAAWkfk6s2s15PSnPawkjgav1TGsUo
+        o4DbtV2to9d9E8Aw7pyqzazXc9KctjASuFr/lEYxyijg56ZqHb3umACGcatUbWa92tn8c1v7SOBq7VMa
+        wUijgHd9VuHmCWAY10/VZtbrrDS3tY8ErtY+pRGMNAr4HalaS6+5n1UAOCC7/m79I2luax8JXK19SiMY
+        6SHOc1O1ll7HJoBhXDpVm9mU2l87p7WPBK7WPqURjPIxzl3vhzZT4xIJYCi7/oln7qez1z4SuFr7lEYw
+        ykFOu74j9sEEMJxdf+fZnh+Y09pHAldrn9IIRjnKeddnYtqvpwCGs+tTz+0TBHNa+0jgau1TGsEoo4Bv
+        nap19HplAhhO+0x/tan1amcIzGntI4GrtU9pBKOMAr5LqtbR65kJYDi7nnw295jWtY8ErtY+pRGMMgp4
+        15Mxn5gAhrPr2eePTHNa+0jgau1TGsEoo4B3nY3R3uEAGM6u089+N81p7SOBq7VPaQSjjALedTrm/RLA
+        cHadf/4XaU5rHwlcrX1KIxhlFPCzUrWOXndKAMM5KVWbWq9XpTmtfSRwtfYpjWCUUcCvTtU6et0yAQzn
+        Bqna1Hq1TX1Oax8JXK19SiMYZRTw21O1jl7XSwDDOS5Vm1qvD6U5rX0kcLX2KY1glFHA7Zqu1tHrKglg
+        OEemalOb0iXTnNY8Erha95SWbpRRwO1abmf6V2vpdakEMKSPpWpj63XlNKc1jwSu1j2lpRtlFHD7U3y1
+        jl5zvxMGcFCdnarNrVd7MG9Oax4JXK17Sks3ysOb7ff41Tp6tecGAIb1ulRtbr1ukea05pHA1bqntHSj
+        fHyzPclfraNX++QAwLDaYTnV5tbrB9Oc1jwSuFr3lJZulAOc2mf5q3X0amcHAAzryana3Hr9ZJrTmkcC
+        V+ue0tKNcoRzO82vWkevdnogwLAek6rNrdfck/bWPBK4WveUlm6UUcC7Tixs8wMAhvXAVG1uveaegrbm
+        kcDVuqe0dKOMAm7XcrWOXiP8cAlwoXZ9m3buOehrHglcrXtKSzfKKOB2LVfr6HWXBDCsk1O1ufV6RZrT
+        mkcCV+ue0tKNMgr4lalaR69bJ4Bh3TBVm1uvuT+rveaRwNW6p7R0o4wC3vWMiesngGEdn6rNrdcH0pzW
+        PBK4WveUlm6UUcAfTNU6eo1wyiTAhdr1vPZ2dvrF01zWPBK4WveUlm6EUcDtGt51DsBlEsDQPpGqDa7X
+        f0lzWfNI4GrdU1q6EUYBH5uqNfQ6NwEM75xUbXK95vyT2ppHAlfrntLSjTAKuF3D1Rp6vSMBDO+Nqdrk
+        et08zWmtI4GrNU9pyUYZBdyu4WodvdrzDQDDe0GqNrled0xzWutI4GrNU1qyUUYB/0Cq1tHruQlgeE9J
+        1SbX69Q0p7WOBK7WPKUlG+Whzfumah29npQAhvfYVG1yvR6R5rTWkcDVmqe0ZKN8bLMdO1yto9ejEsDw
+        HpSqTa7XE9Kc1joSuFrzlJZslIObTkvVOnr9TAIY3j1Stcn1Oj3Naa0jgas1T2nJRjm6+U9TtY5ed0sA
+        w2tHr1abXK+XpTmtdSRwteYpLdkoo4Bfnqp19DopAQzvxqna5Hq9Nc1prSOBqzVPaclGGQV8ZqrW0esG
+        CWB410zVJterfSxvTmsdCVyteUpLNsoo4F1PKzwuAQzvqFRtcr3OS0ekuax1JHC15ikt2QijgNu1+9lU
+        raPXnKcVAhwy7ajcT6Vqo+t1dJrLWkcCV2ue0pKNMAr4mFStodfHE8BqvDtVm12vE9Jc1joSuFrzlJZs
+        hFHA107VGnqdnQBW44xUbXa95jxkZ60jgas1T2nJRhgFvOsPlK9LAKvxolRtdr3ukOay1pHA1ZqntGQj
+        jAI+JVVr6LX0XykB7Mmuh+zcO81lrSOBqzVPaclGGAV8n1StodeTE8Bq/HqqNrteD01zWuNI4Gq9U1qq
+        UUYBPyxV6+j1mASwGj+fqs2u19wnt61xJHC13ikt1SijgNv5ENU6ej0wAazGvVK12fV6eprTGkcCV+ud
+        0lKN8rBmu3ardfRq51EArMbtUrXZ9XppmtMaRwJX653SUo3ycc127Vbr6HVyAliNE1O12fV6S5rTGkcC
+        V+ud0lKNcmDT36dqHb1ulABW42tTtdn1el+a0xpHAlfrndJSjXJkc3vmoFpHr+MTwGp8Rao2u17tLPXD
+        01zWOBK4Wu+UlmqEUcDtY6GfSdU6erVPOQCsxoFsiO2Hh7mscSRwtd4pLdUIo4CvmKo19PpkAlid9nZ+
+        ten1ar8+mMsaRwJX653SUo0wCvhaqVpDr3MSwOq0B/qqTa9Xe4BwLmscCVytd0pLNcIo4F0fen1jAlid
+        XT8W1T5COJc1jgSu1julpRphFPCuH3t9QQJYnV0PRmmHCM1ljSOBq/VOaalGGAX846laQ6+nJoDV2fVo
+        1HaM8FzWOBK4Wu+UlmqEUcC/kKo19HpcAlidXYejtEFCc1njSOBqvVNaqhFGAT8+VWvo9eAEsDpttG+1
+        6fVqh/PMZY0jgav1TmmpRhgFvOuDivdIAKtzh1Rter1elOa0tpHA1VqntESjjAJ+carW0WvOBxUBZtMG
+        5lSbXq8z0pzWNhK4WuuUlmiUUcBvTtU6et04AazOCana9Hq9O81pbSOBq7VOaYlGeUjzPalaR69rJoDV
+        OTpVm16vuX+/vraRwNVap7REI3xMs12ru/4a6agEsDpHpDbcp9r4es25Ma5tJHC11ikt0QgHNbVrtVpD
+        r7l/0AWY1a4f4ZrzrdG1jQSu1jqlJRrhqOavSdUaerVfGwCs1ltTtfn1mvPhqLWNBK7WOqUlGmEU8Lel
+        ag295n7YFWBWL0vV5tdrzo9HrW0kcLXWKS3RCKOA26+CqjX0mvvjrgCzOj1Vm1+vOQ9IWdtI4GqtU1qi
+        EUYB3zNVa+g154FXALN7Qqo2v14PSnNZ20jgaq1TWqIRRgG343yrNfSa88hrgNk9IlWbX6/HprmsbSRw
+        tdYpLdEIo4DbQJ9qDb3mHHoFMLtTU7X59XpKmsvaRgJXa53SEo0wCriN9K3W0GvOsdcAs7tjqja/Xi9I
+        c1nbSOBqrVNaohFGAbdrtVpDr9slgNW6eao2v15vTHNZ20jgaq1TWqIRRgG3a7VaQ68TE8BqtT+JVZtf
+        r3PSXNY2Erha65SWaNcjduccBfyuVK2h17USwGodm6rNr9cn05x2faFZ4kjgap1TWppRRgG3a7VaR68r
+        JoDVung6L1UbYK/2AjCXNY0ErtY5paUZYRTw5VO1hl5tRsbhCWDVPpCqTbDX8WkuaxoJXK1zSkszwsOZ
+        10jVGnq9LwGsXtuQq02w1w3TXNY0Erha55SWZoSPZ94oVWvo9ZYEsHqvSNUm2OvkNJc1jQSu1jmlpRnh
+        gKZ2jVZr6PXSBLB6z0zVJtirHdE7lzWNBK7WOaWlGeGI5l3X+PQEsHpPTNUm2OuBaS5rGglcrXNKSzPC
+        KOB2jVZr6LXUQVIAB9WuI10fk+ayppHA1TqntDQjjAJu12i1hl4PSwCrd79UbYK9npzmsqaRwNU6p7Q0
+        I4wC/sNUraHXfRLA6v1gqjbBXnM+zLWmkcDVOqe0NCOMAt714dE7JIDVu0WqNsFer0tzWdNI4GqdU1qa
+        EUYBvz5Va+i1xI+PAhx0ux7ocnaay5pGAlfrnNLSjDAK+F9StYZeJySA1btyqjbBXh9Lc1nTSOBqnVNa
+        mhFGAbdrtFpDr6MTwOpdMn0uVRthr7mmuq1pJHC1ziktzdJHAbdrs/rn92qzMY5IAJvwoVRthr2OS3NY
+        00jgap1TWpqljwJu12b1z+/VfrAB2Iy3p2oz7HWDNJe1jASu1jilJRlhFPC3pGoNvc5MAJvx6lRthr1O
+        SnNZy0jgao1TWpIRRgF/d6rW0OvlCWAz/iJVm2Gvu6W5rGUkcLXGKS3JCA9ltvMGqjX0Oj0BbMbvpmoz
+        7PUzaS5rGQlcrXFKSzLCxzJ/NlVr6PWEBLAZj0zVZtjrUWkuaxkJXK1xSksywsFMj07VGno9IgFsRjuf
+        vdoMez0pzWUtI4GrNU5pSUY4mvn3U7WGXqcmgM24c6o2w17PTXPZdfjMT6YlqdY4pSXZdYDUnMOZ2rVZ
+        raHXHRPAZtwqVZthr3Yc7FzaiNZqDb3ulZbkw6la50XVzmlYknunap29HprmsutRxTdPAJtx/VRthr3e
+        keZySqrW0GvOs+enaEOUqnVeVK9NS7LrQ4C3T3Np12a1hl5zHlUMsO92PWr33DSXy6e9nu3+vnSptCQP
+        SdVaL6oHpyVp39P2mf5qrRfWR1M7QGgu7Z9XraPXsQlgMy6dqs1wSpdJc9nrpxV+Oi3NUWkv5+i3A5Cu
+        kJamfW+r9V5Ycz5d367Jag292kyMSySATflIqjbFXnOetNc29lemah1fWvvI2eFpiW6ZPpOqdX9x7X9z
+        i7RE7Xs79UG7l6U534nZ9aTCDySAzTkrVZtir/b8wJza28hPT9VaWu1Pcb+XlvbW/5dqD5u9N1VfQ+s9
+        6WZpydokyd9JFzVN8qlp7nkM35SqtfRa4vhogENu15P22icI9sNNUjvB8C2pvaXe/t/2n9sQmFG0yXjt
+        Y4ovSmd/oRd+4f8219S8g6G94J6W3pTacxdnfOE/3zDth1un6lrt9YoEsDnPSdWm2OsuCZakXZPVtdrr
+        mQlgc9qpftWm2GuJD9qxbXt9QPH8npgANqed619tir1+OcGStGuyulZ7/WIC2Jw22a/aFHu1B+5gSdo1
+        WV2rvdoRxwCb02b7V5tir2clWJJnp+pa7XWnBLA5J6VqU+z16gRL8ppUXau92vkMAJvzzanaFHu9PcGS
+        /FOqrtVe100Am3O1VG2KvZY2qQ52mbjYunIC2JwjU7UpTmnpp+6xHe10wos6mfCian8twCbtddre+V0l
+        wRK0a7G6Rnt5JwvYtHYUbbU59rpegiVo12J1jfbyLAuwaa9L1ebYy9PTLMV3puoa7eXTLMCmtRG61ebY
+        y+enWYofStU12st5FsCm/UGqNsdeTlBjKX4qVddorzZJEmCzfjVVm2MvZ6izFL+Uqmu01yMTwGb9XKo2
+        x16mqLEUv5Oqa7TX/RPAZt09VZtjL3PUWYo/T9U12uvOCWCzvidVm2OvVyZYgnYtVtdor1slgM26Yao2
+        x15vS7AE7VqsrtFe108Am3V8qjbHXu3sdViCXecAfFUC2KzLpmpznNKVEuynY1J1bfZqswMunQA27V9T
+        tUn28jtU9ttJqbo2e52TADavHYlabZK9Hp1gP+16jsXLEsDmPSlVm2Svd6eLJ9gP7dp7b6quzV6/nQA2
+        7x6p2iSn1D5GCPvhNqm6Jqd0lwSweddK1SY5pRcn2A8vSdU1OaX26ReAzbtYemeqNsopfX+COf1gqq7F
+        KZ2VAPiCx6Zqs5xS+z3sUQnmcPnUnj+prsUpGQIE8EW+NVWb5dSenTwQyKF2ifSXqboGp+YEQIAv8eZU
+        bZhTe0pqv06AQ6FdW7t+YuX83pAA+BI/mqpNcy+1j1ddMsHBdKnURlBX19xeMgEQoNCORn1PqjbOvfQ3
+        yTnrHCzHpdem6lrbS+1BVz+cAlyIe6Zq89xrH0g/nS6TYBdHpp9NH0zVNbbX7poAuBBHpLekagPdpfaO
+        wv3TVRNM0d49ekDa9ZS/qva7/8MTABfhJum8VG2kB9IZ6VfSndK3peukdiCLtlu7Btq10K6Jdm20a6S6
+        dg6kz6RvSQBM0Ab9VJupNFqPSABM1J66bm+bVhuqNEqvSe3sAAD24MrpXanaWKWl104LvEoCYAc3TB9N
+        1QYrLbUPp29MAByA9lDguanaaKWl1X5gvWkC4CC4WfpIqjZcaSn9ezoxAXAQfX16R6o2Xmm/+6d0QgLg
+        EDgmvTBVG7C0Xz03XTEBcAi1qWw/ljwcqP3u4+l+yRRKgBm1433/MH0uVZuzdCh7Trp6AmCftCeuX5Kq
+        TVo62LVfQbXjgwFYiOun9o6AjwzqYNc+1//76boJgIVqI4C/P/1RcpKgdu2c9JR0+2SsNMCAvjqdkh6c
+        /iA9P70qtbHDZ2nTtWugXQvtmmh/wn9QukNqkwIBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALgwhx32fwFu58I6Mssg
+        FgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="colorDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>353, 17</value>
   </metadata>
